--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,7 +103,7 @@ ul, li {
     max-width: 40%;
     justify-content: space-evenly;
     align-items: center;
-    flex: 1;
+    /* flex: 1; */
 
 }
 
@@ -129,7 +129,8 @@ ul, li {
 }
 
 .about h1 {
-    font-size: 108px;
+    font-size:80px;
+    text-align: center;
     font-weight: 700;
     margin: 60px auto;
     
@@ -294,6 +295,11 @@ ul, li {
  {
     font-size: 25px;
 }
+
+
+
+
+
 
 /* WHAT FOLLOWS IS INSPIRED FROM CODEPEN EXAMPLE */
 /* WHAT FOLLOWS IS INSPIRED FROM CODEPEN EXAMPLE */
