--- a/styles/media.css
+++ b/styles/media.css
@@ -16,7 +16,7 @@
         max-width: 90%;
     }
     .about h1 {
-        font-size: 100px;
+        font-size: 80px;
     }
     .about p {
         max-width: 90%;
@@ -34,21 +34,28 @@
     }
     .howto {
         width: 80%;
-        }
-        .howto ol {
+    }
+    .howto ol {
         font-size: 36px;
-            }
-            .tips-box h3
-{
-font-size: 24px ;
-}
-.footer-google h5, .footer-google input, .footer-google button
- {
+    }
+    .tips-title {
+        font-size: 80px;
+        /* padding: 10px 20px; */
+        }
+    .tips-box h3 {
+        font-size: 24px ;
+    }
+    .footer-google h5, .footer-google input, .footer-google button
+    {
     font-size: 20px;
-}
+    }
+    .about-left {
+        max-width: 90%;
+        margin: auto;
+
 }
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
     .navigation {
         flex-direction: column;
         align-items: center;
@@ -57,7 +64,87 @@ font-size: 24px ;
     .nav-o {
         font-size: 80px;
         /* margin-left: 40px; */
+        margin: 0;
     }
+    .nav-po {
+        display: none;
+    }
+    ul {
+        gap: 20px;
+        margin-top: 20px;
+    }
+    ul li {
+        padding: 4px 8px;
+    }
+    .about-left {
+        max-width: 90%;
+        margin: auto;
+    }
+    .about h1 {
+        font-size: 60px;
+    
+    }
+    .howto h2 {
+        font-size: 48px;
+    }
+    .howto ol {
+        font-size: 30px;
+        margin-bottom: 30px;
+    }
+    .bullet {
+        padding: 10px;
+        height: 20px;
+        width: 20px;
+    }
+    .tips {
+        flex-direction: column;
+    }
+    .tips-box {
+        max-width: 90%;
+        margin: auto;
+        margin-bottom: 40px;
+    }
+    .tips-title {
+        font-size: 50px;
+        padding: 15px 20px;
+        margin: 100px auto;
+    }
+    .tips-large {
+        margin-top: -50px;
+        margin-bottom: 100px;
+    }
+    .footer {
+        margin-top: 100px;
+    }
+    .footer-google {
+        flex-direction: column;
+    }
+    .footer-google h5, .footer-google input, .footer-google button
+ {
+    font-size: 20px;
+}
+}
+
+@media (max-width: 618px) {
+     .nav-o {
+        font-size: 70px;
+    }
+    .about p {
+        font-size: 30px;
+    }
+        .howto h2 {
+        font-size: 48px;
+    }
+    .howto ol {
+        font-size: 30px;
+        margin-bottom: 30px;
+    }
+    .tips-title {
+        font-size: 40px;
+        padding: 15px 20px;
+        margin: 100px auto;
+    }
+
 }
 
 /* codepen */
@@ -78,4 +165,4 @@ font-size: 24px ;
       width: 40%!important;
     }
   }
-  /* codepen */
+  /* codepen */}
